<resources>
    <string name="app_name">Hello Student</string>
    <string name="string_level">Level</string>
    <string name="string_hello">Hello,</string>
    <string name="string_student">Student!</string>
    <string name="string_a1">A1+</string>
    <string name="string_a2">A2</string>
    <string name="string_list">List</string>
    <string name="string_of">of</string>
    <string name="string_verbs">Verbs</string>
    <string name="section_1_a1_string">Section 1</string>
    <string name="section_2_a1_string">Section 2</string>
    <string name="section_3_a1_string">Section 3</string>
    <string name="section_4_a1_string">Section 4</string>
    <string name="string_present">Present</string>
    <string name="string_past">Past</string>
    <string name="string_form">Form</string>
    <string name="string_translation">Translation</string>
    <string name="leave">leave</string>
    <string name="left">left</string>
    <string name="leave_translation1">оставлять</string>
    <string name="leave_translation2">покидать</string>
    <string name="leave_translation3">уходить</string>
    <string name="put">put</string>
    <string name="put_translation">класть</string>
    <string name="feel">feel</string>
    <string name="feel_past">felt</string>
    <string name="feel_translation">чувствовать</string>
    <string name="tell">tell</string>
    <string name="tell_past">told</string>
    <string name="tell_translation1">сказать</string>
    <string name="tell_translation2">рассказывать</string>
    <string name="say">say</string>
    <string name="say_past">said</string>
    <string name="say_translation1">сказать</string>
    <string name="say_translation2">говорить</string>
    <string name="string_break">break</string>
    <string name="break_past">broke</string>
    <string name="break_translation">ломать</string>
    <string name="think">think</string>
    <string name="think_past">thought</string>
    <string name="think_translation">думать</string>
    <string name="know">know</string>
    <string name="know_past">knew</string>
    <string name="know_translation">знать</string>
    <string name="draw">draw</string>
    <string name="draw_past">drew</string>
    <string name="draw_translation1">рисовать</string>
    <string name="draw_translation2">чертить</string>
    <string name="fly">fly</string>
    <string name="fly_past">flew</string>
    <string name="fly_translation">летать</string>
    <string name="choose_correct_word">Choose the correct word</string>
    <string name="pat">pat</string>
    <string name="putted">putted</string>
    <string name="pet">pet</string>
    <string name="tall">tall</string>
    <string name="tald">tald</string>
    <string name="talked">talked</string>
    <string name="brouk">brouk</string>
    <string name="breakt">breakt</string>
    <string name="knou">knou</string>
    <string name="knee">knee</string>
    <string name="knew">knew</string>
    <string name="flow">flow</string>
    <string name="fleu">fleu</string>
    <string name="leaved">leaved</string>
    <string name="leaft">leaft</string>
    <string name="laft">laft</string>
    <string name="feelt">feelt</string>
    <string name="fealt">fealt</string>
    <string name="sayd">sayd</string>
    <string name="saed">saed</string>
    <string name="thot">thot</string>
    <string name="thout">thout</string>
    <string name="drought">drought</string>
    <string name="dreu">dreu</string>
    <string name="lived">lived</string>
    <string name="check">Check</string>
    <string name="restart">Restart</string>
    <string name="debug">Debug</string>
    <string name="debug1">Debug1</string>
    <string name="debug2">Debug2</string>
    <string name="task_a1_step1_sect3_1">Click on</string>
    <string name="task_a1_step1_sect3_2">irregular verbs</string>
    <string name="only">ONLY</string>
    <string name="sea">sea</string>
    <string name="slow">slow</string>
    <string name="swim">swim</string>
    <string name="slim">slim</string>
    <string name="see">see</string>
    <string name="talk">talk</string>
    <string name="said">said</string>
    <string name="stay">stay</string>
    <string name="travel">travel</string>
    <string name="thought">thought</string>
    <string name="tidy">tidy</string>
    <string name="clear">clear</string>
    <string name="love">love</string>
    <string name="live">live</string>
    <string name="write">write</string>
    <string name="right">right</string>
    <string name="move">move</string>
    <string name="felt">felt</string>
    <string name="last">last</string>
    <string name="work">work</string>
    <string name="drew">drew</string>
    <string name="walk">walk</string>
    <string name="want">want</string>
    <string name="broke">broke</string>
    <string name="fill">fill</string>
    <string name="paint">paint</string>
    <string name="met">met</string>
    <string name="need">need</string>
    <string name="read">read</string>
    <string name="drove">drove</string>
    <string name="ask">ask</string>
    <string name="like">like</string>
    <string name="turn">turn</string>
    <string name="listen">listen</string>
    <string name="call">call</string>
    <string name="could">could</string>
    <string name="arrive">arrive</string>
    <string name="string_try">try</string>
    <string name="clean">clean</string>
    <string name="cry">cry</string>
    <string name="hate">hate</string>
    <string name="went">went</string>
    <string name="enjoy">enjoy</string>
    <string name="run">run</string>
    <string name="jump">jump</string>
    <string name="laugh">laugh</string>
    <string name="buy">buy</string>
    <string name="crew">crew</string>
    <string name="fill_in_the_gaps">Fill in the gaps.</string>
    <string name="use_past_simple">Use past simple</string>
    <string name="verbs_in_brackets">of the verbs in brackets</string>
    <string name="it_must_be_a_joke">\'It must be a joke\',</string>
    <string name="jimmy">Jimmy</string>
    <string name="choose1_a1_step3_sect4">(think, leave, put).</string>
    <string name="previous_arrows"><![CDATA[<<]]></string>
    <string name="next_arrows"><![CDATA[>>]]></string>
    <string name="finish">Finish</string>
    <string name="I">I</string>
    <string name="fly_think_know">(fly, think, know)</string>
    <string name="all_the_answers">all the answers in the quiz.</string>
    <string name="Exit">Exit</string>
    <string name="Michael">Michael</string>
    <string name="tell_draw_feel">(tell, draw, feel)</string>
    <string name="a_nice_picture">a nice picture.</string>
    <string name="Mum">Mum</string>
    <string name="fly_tell_break">(fly, tell, break)</string>
    <string name="me_a_wonderful_story">me a wonderful story.</string>
    <string name="say_think_leave">(say, think, leave)</string>
    <string name="home_at_8_am_yesterday">home at 8 a.m. yesterday.</string>
    <string name="dad">dad.</string>
    <string name="say_break_know">(say, break, know)</string>
    <string name="sa_go_to_bed">\'Sam, go to bed\',</string>
    <string name="astrid_was_tired">Astrid was tired</string>
    <string name="badly">badly.</string>
    <string name="and">and</string>
    <string name="leave_put_feel">(leave, put,feel)</string>
    <string name="Robert">Robert</string>
    <string name="break_fly_put">(break, fly, put)</string>
    <string name="to_new_york">to New York</string>
    <string name="last_week">last week.</string>
    <string name="He">He</string>
    <string name="put_break_feel">(put, break, feel)</string>
    <string name="the_book_intro_his_bag">the book into his bag</string>
    <string name="and_went_to_school">and went to school.</string>
    <string name="Helen">Helen</string>
    <string name="think_tell_break">(think, tell, break)</string>
    <string name="her_arm_last_week">her arm last week.</string>
    <string name="step1">Step1</string>
    <string name="step2">Step2</string>
    <string name="step3">Step3</string>
    <string name="change_level">Change Level</string>
    <string name="exit_step">Exit This Step</string>
    <string name="be">be</string>
    <string name="string_bracket_open">(</string>
    <string name="string_bracket_close">)</string>
    <string name="am">am</string>
    <string name="comma">,</string>
    <string name="is">is</string>
    <string name="are">are</string>
    <string name="was">was</string>
    <string name="were">were</string>
    <string name="be_translation">быть</string>
    <string name="have">have</string>
    <string name="had">had</string>
    <string name="have_translation">иметь</string>
    <string name="go">go</string>
    <string name="string_went">went</string>
    <string name="go_translation">идти</string>
    <string name="can">can</string>
    <string name="string_could">could</string>
    <string name="can_translation1">мочь</string>
    <string name="can_translation2">уметь</string>
    <string name="come">come</string>
    <string name="came">came</string>
    <string name="come_translation1">приходить</string>
    <string name="string_read">read</string>
    <string name="read_translation">читать</string>
    <string name="ride">ride</string>
    <string name="rode">rode</string>
    <string name="ride_translation">ехать</string>
    <string name="bought">bought</string>
    <string name="buy_translation">покупать</string>
    <string name="saw">saw</string>
    <string name="see_translation1">видеть</string>
    <string name="take">take</string>
    <string name="took">took</string>
    <string name="take_translation1">брать</string>
    <string name="take_translation2">взять</string>
    <string name="bot">bot</string>
    <string name="boght">boght</string>
    <string name="weant">weant</string>
    <string name="culd">culd</string>
    <string name="cood">cood</string>
    <string name="red">red</string>
    <string name="rad">rad</string>
    <string name="taked">taked</string>
    <string name="told">told</string>
    <string name="hade">hade</string>
    <string name="hed">hed</string>
    <string name="sow">sow</string>
    <string name="seed">seed</string>
    <string name="wos">wos</string>
    <string name="wear">wear</string>
    <string name="road">road</string>
    <string name="rood">rood</string>
    <string name="caim">caim</string>
    <string name="comed">comed</string>
    <string name="climb">climb</string>
    <string name="where">where</string>
    <string name="weer">weer</string>
    <string name="cold">cold</string>
    <string name="cloud">cloud</string>
    <string name="head">head</string>
    <string name="hand">hand</string>
    <string name="reed">reed</string>
    <string name="look">look</string>
    <string name="some">some</string>
    <string name="wait">wait</string>
    <string name="washed">washed</string>
    <string name="watch">watch</string>
    <string name="bike">bike</string>
    <string name="bright">bright</string>
    <string name="rat">rat</string>
    <string name="verbs_list">Verbs List</string>
    <string name="past">past</string>
    <string name="participle">part.</string>
    <string name="slash">/</string>
    <string name="hit">hit</string>
    <string name="keep">keep</string>
    <string name="spend">spend</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dot">.</string>
    <string name="simple">simple</string>
    <string name="Choose_and_write">Choose and write</string>
    <string name="of_the_verbs_in_brackets">of the verbs in brackets.</string>
    <string name="Yesterday_I">Yesterday I</string>
    <string name="a_lot_of_time">a lot of time</string>
    <string name="doing_my_homework">doing my homework</string>
    <string name="level_a1">Level A1+</string>
    <string name="level_a2">Level A2</string>
    <string name="revision">Revision</string>
    <string name="hello_student">Hello, Student!</string>
</resources>