<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/section_3_a1_string"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/pannel_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Choose_and_write"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"></TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/simple"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/participle"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/of_the_verbs_in_brackets"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"></TextView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pannel_blue"
            android:paddingHorizontal="12dp"
            android:paddingVertical="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/Yesterday_I"
                        android:textColor="@color/colorBlack"
                        android:textSize="35dp"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        app:boxBackgroundMode="outline"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autoSizeMaxTextSize="20dp"
                            android:backgroundTint="@color/colorPrimaryDark"
                            android:text=""
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20dp"></com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/imgCorrect"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="10dp"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_bracket_open"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keep"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hit"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"></Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spend"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_bracket_close"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="37dp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/a_lot_of_time"
                            android:textColor="@color/colorBlack"
                            android:textSize="35dp"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/doing_my_homework"
                            android:textColor="@color/colorBlack"
                            android:textSize="35dp"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dot"
                            android:textColor="@color/colorBlack"
                            android:textSize="33dp"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCheck"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_blue"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/check"
                android:textColor="@color/colorButton"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/btnRestart"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_blue"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/restart"
                android:textColor="@color/colorButton"
                android:textSize="40dp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/btnPrevious"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:background="@drawable/button_blue"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previous_arrows"
                    android:textColor="@color/colorButton"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/previous"
                    android:textColor="@color/colorButton"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnNext"
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:background="@drawable/button_blue"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/colorButton"
                    android:textSize="33dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/next_arrows"
                    android:textColor="@color/colorButton"
                    android:textSize="33dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Exit"
            android:textColor="@color/colorButton"
            android:textSize="35dp" />
    </LinearLayout>
</LinearLayout>