<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center">
    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="550dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/pannel_blue"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_student"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/btnA1"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/level_a1"
            android:textColor="@color/colorButton"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/btnA2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/level_a2"
            android:textColor="@color/colorButton"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/btnVerbsList"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/verbs_list"
            android:textColor="@color/colorButton"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/btnRevision"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/revision"
            android:textColor="@color/colorButton"
            android:textSize="35sp" />
    </LinearLayout>
</LinearLayout>